[package]
name = "m3u-viewer"
version = "0.3.0"
edition = "2024"
description = "Fast terminal viewer for large M3U playlists"
license = "GPL-2.0-only"
repository = "https://github.com/jvonscheidt/m3u-viewer"

[dependencies]
anyhow = "1.0.103"
directories = "6.0.0"
log = "0.4.33"
percent-encoding = "2.3.2"
ratatui = "0.30.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
simplelog = "0.12.2"
thiserror = "2.0.18"
toml = "1.1.2"
ureq = "3.3.0"

[lints.rust]
unsafe_code = "warn"
missing_docs = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "warn"
