[package]
name = "m3u-viewer"
version = "0.6.1"
edition = "2024"
description = "Fast terminal viewer for large M3U playlists"
license = "Apache-2.0"
repository = "https://github.com/jvonscheidt/m3u-viewer"

[dependencies]
anyhow = "1.0.103"
chrono = "0.4.42"
directories = "6.0.0"
flate2 = "1.1.5"
log = "0.4.33"
percent-encoding = "2.3.2"
quick-xml = "0.41.0"
ratatui = "0.30.2"
regex = "1.12.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
simplelog = "0.12.2"
thiserror = "2.0.18"
toml = "1.1.2"
ureq = "3.3.0"

[lints.rust]
unsafe_code = "warn"
missing_docs = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "warn"
